--- a/prueba-sprint/src/main/resources/templates/fragments/navbar.html
+++ b/prueba-sprint/src/main/resources/templates/fragments/navbar.html
@@ -5,10 +5,8 @@
     <nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-dark bg-gradient fixed-top">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="/">
-                <div class="navbar-logo me-2">
-                    <i class="fas fa-shield-alt"></i>
-                </div>
-                <span class="fw-bold">Sistema Moderno</span>
+                <img src="/images/logo.png" alt="Grand Line Logo" class="navbar-logo-img me-2">
+                <span class="fw-bold">Grand Line</span>
             </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
@@ -24,18 +22,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#features">
-                            <i class="fas fa-star me-1"></i>Características
+                        <a class="nav-link" href="#gamer">
+                            <i class="fas fa-gamepad me-1"></i>Gamer
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">
-                            <i class="fas fa-info-circle me-1"></i>Acerca de
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">
-                            <i class="fas fa-envelope me-1"></i>Contacto
+                        <a class="nav-link" href="#anime">
+                            <i class="fas fa-dragon me-1"></i>Anime
                         </a>
                     </li>
                     <li class="nav-item ms-lg-3">
