--- a/prueba-sprint/src/main/resources/templates/fragments/footer.html
+++ b/prueba-sprint/src/main/resources/templates/fragments/footer.html
@@ -8,13 +8,11 @@
                 <!-- Columna 1: Información -->
                 <div class="col-lg-4 col-md-6">
                     <div class="footer-brand mb-3">
-                        <div class="navbar-logo d-inline-block me-2">
-                            <i class="fas fa-shield-alt"></i>
-                        </div>
-                        <h5 class="d-inline-block mb-0">Sistema Moderno</h5>
+                        <img src="/images/logo.png" alt="Grand Line Logo" class="footer-logo-img me-2">
+                        <h5 class="d-inline-block mb-0">Grand Line</h5>
                     </div>
                     <p class="text-white-50 mb-3">
-                        Una plataforma moderna y segura para la gestión eficiente de tu información.
+                        Tu destino para todo sobre gaming y anime. Únete a la aventura.
                     </p>
                     <div class="social-links">
                         <a href="#" class="social-link">
@@ -34,12 +32,12 @@
 
                 <!-- Columna 2: Enlaces Rápidos -->
                 <div class="col-lg-2 col-md-6">
-                    <h6 class="text-white fw-bold mb-3">Enlaces Rápidos</h6>
+                    <h6 class="text-white fw-bold mb-3">Secciones</h6>
                     <ul class="footer-links list-unstyled">
                         <li><a href="/">Inicio</a></li>
-                        <li><a href="#features">Características</a></li>
-                        <li><a href="#about">Acerca de</a></li>
-                        <li><a href="#contact">Contacto</a></li>
+                        <li><a href="#gamer">Gamer</a></li>
+                        <li><a href="#anime">Anime</a></li>
+                        <li><a href="/login">Login</a></li>
                     </ul>
                 </div>
 
@@ -47,10 +45,10 @@
                 <div class="col-lg-2 col-md-6">
                     <h6 class="text-white fw-bold mb-3">Recursos</h6>
                     <ul class="footer-links list-unstyled">
-                        <li><a href="#">Documentación</a></li>
-                        <li><a href="#">API</a></li>
-                        <li><a href="#">Soporte</a></li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Comunidad</a></li>
+                        <li><a href="#">Noticias</a></li>
+                        <li><a href="#">Reseñas</a></li>
+                        <li><a href="#">Eventos</a></li>
                     </ul>
                 </div>
 
@@ -60,15 +58,11 @@
                     <ul class="footer-contact list-unstyled">
                         <li>
                             <i class="fas fa-map-marker-alt me-2"></i>
-                            Ciudad, País
-                        </li>
-                        <li>
-                            <i class="fas fa-phone me-2"></i>
-                            +123 456 7890
+                            New World, Grand Line
                         </li>
                         <li>
                             <i class="fas fa-envelope me-2"></i>
-                            info@sistemamoderno.com
+                            info@grandline.com
                         </li>
                     </ul>
                 </div>
@@ -79,7 +73,7 @@
             <div class="row">
                 <div class="col-md-6 text-center text-md-start">
                     <p class="text-white-50 mb-0">
-                        &copy; 2025 Sistema Moderno. Todos los derechos reservados.
+                        &copy; 2025 Grand Line. Todos los derechos reservados.
                     </p>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
